# wireshark-lua-plugin

./: .editorconfig  .gitattributes  .gitlab-ci.yml  CMakeLists.txt  README.md  config.ld
.github/workflows/: msys2.yml
cmake/: FindPCRE2.cmake
examples/: icmpv6.lua  init.lua  ipv6.lua
lrexlib/: CMakeLists.txt  common.c  common.h
lrexlib/pcre2/: lpcre2.c  lpcre2_f.c
lua/: CMakeLists.txt
lua/src/: luaconf.h
src/: CMakeLists.txt  enums.c  enums.h  plugin.c  wauxlib.c  wauxlib.h  wl_addr.c  wl_addr.h  wl_expert.c  wl_expert.h  wl_funnel.c  wl_funnel.h  wl_packet.c  wl_packet.h  wl_pinfo.c  wl_pinfo.h  wl_prefs.c  wl_prefs.h  wl_proto.c  wl_proto.h  wl_tvbuff.c  wl_tvbuff.h  wl_util.c  wl_util.h  wl_value_string.c  wl_value_string.h  wslua-int.h  wslua.c  wslua.h
test/: test.lua
test-aux/mingw64-wireshark-cli/: PKGBUILD
